--- a/第007课：分支和循环结构的应用.md
+++ b/第007课：分支和循环结构的应用.md
@@ -131,6 +131,7 @@ Author: 骆昊
 a, b = 1, 1
 print(a, b, end=' ')
 # 通过递推公式算出后面的18个数
+# for语句中的_可以换成别的，对程序无影响
 for _ in range(18):
     a, b = b, a + b
     print(b, end=' ')
